fix gap at the top of the news boxes (#4)

--- a/styles/001/style.css
+++ b/styles/001/style.css
@@ -481,7 +481,6 @@ td.date {
 }
 
 .pouetbox_newsbox .content p {
-  margin-top: 10px;
   margin-bottom: 10px;
 }
 
